# off

./: NanoSpace.pro  NanoSpace.pro.qtds  Scree.ui.qml  Screen01.ui.qml  buttons.qml  camera.qml  demoitem.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  panel.qml  qbatterywidget.cpp  qbatterywidget.h  qml.qrc  qroute.cpp  qroute.h  second_window.h  second_window.ui
lib/: CMakeLists.txt  lib.pri  lib.pro  on_map_click.cpp
lib/QGeoView/: QGVMap.h  on_map_click.h
samples/: background.cpp  background.h  customtiles.h  ellipse.h  flags.cpp  items.h  mouse.cpp  mouse.h  mytile.h  mytiles.h  placemark.h  rectangle.h  utilities.h  waveanimation.h  widgets.cpp
